# genai

./: .gitignore  README.md  pyproject.toml  requirements.txt
DeepAgents/: 1-basicdeepagent.ipynb  2-backends.ipynb
DeepAgents/notes/: todo.txt
Langgraph/1-BasicChatBot/: 1-basicChatBot.ipynb
Langgraph/2-HumanAssistance/: humanInTheLoop.ipynb
Langgraph/3-Dubugging/: agent.py  debugging.ipynb  langgraph.json
Langgraph/Agents/: mutliAiagent.ipynb
MCPIntegration/: client.py  mathserver.py  mcp.ipynb  weather.py
RAGS/: app.py  tree.txt  typesense.ipynb
RAGS/faiss_store/: faiss_index  metadata.pkl
RAGS/notebooks/: document.ipynb
RAGS/src/: data_loader.py  embeddings.py  search.py  vectorstore.py
VectorlessRAGS/: PageIndexRAG.ipynb
langchain/: 1-langchainIntro.ipynb  2-modelIntegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredOutputs.ipynb  6-middleware.ipynb
